crates/biome_cli/tests/snapshots/main_commands_inspect/absent_child_of_override_scalar_has_no_source.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 577
expression: redactor(content)
---
## `biome.json`

```json
{
  "overrides": [
    {
      "includes": ["**/*.js"],
      "formatter": { "lineWidth": 120 }
    }
  ]
}
```

# Emitted Messages

```block
{
  "key": "formatter.lineWidth.extra",
  "value": null,
  "source": null
}
```
