crates/biome_cli/tests/snapshots/main_commands_inspect/identical_composite_declarations_report_the_last_source.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "extends": ["base.json"],
  "formatter": { "lineWidth": 100 }
}
```

## `base.json`

```json
{ "formatter": { "lineWidth": 100 } }
```

# Emitted Messages

```block
{
  "key": "formatter",
  "value": {
    "lineWidth": 100
  },
  "source": {
    "configurationKind": "root",
    "path": "biome.json",
    "range": {
      "end": 65,
      "start": 45
    },
    "scope": "base"
  }
}
```
