crates/biome_cli/tests/snapshots/main_commands_inspect/identical_override_composite_reports_the_override_source.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "formatter": { "lineWidth": 100 },
  "overrides": [
    {
      "includes": ["**/*.js"],
      "formatter": { "lineWidth": 100 }
    }
  ]
}
```

# Emitted Messages

```block
{
  "key": "formatter",
  "value": {
    "lineWidth": 100
  },
  "source": {
    "configurationKind": "root",
    "includes": [
      "**/*.js"
    ],
    "matchedPath": "file.js",
    "overrideIndex": 0,
    "path": "biome.json",
    "range": {
      "end": 132,
      "start": 112
    },
    "scope": "override"
  }
}
```
