crates/biome_cli/tests/snapshots/main_commands_inspect/indexed_extended_array_value_uses_local_source_index.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "extends": ["base.json"],
  "files": { "includes": ["tests/**"] }
}
```

## `base.json`

```json
{ "files": { "includes": ["src/**"] } }
```

# Emitted Messages

```block
{
  "key": "files.includes.1",
  "value": "tests/**",
  "source": {
    "configurationKind": "root",
    "path": "biome.json",
    "range": {
      "end": 66,
      "start": 56
    },
    "scope": "base"
  }
}
```
